# DGIIM_UGR

./: README.md
1 Curso/1 Cuatrimestre/FFT/Examen/: Preguntas Tipo Test Enero 2020.docx
1 Curso/1 Cuatrimestre/FP/: FelizNavidad.cpp  VI_MaxiMin_TablaRectangularEnteros.cpp  VI_MaxiMin_TablaRectangularEnteros_SecuenciaSecuencia.cpp  prueba.cpp
1 Curso/1 Cuatrimestre/FP/Exámen/: ejercicio_1.txt  ejercicio_2.txt
1 Curso/1 Cuatrimestre/FP/Practicas/: III_GaussianaCDF_Funcs_ReglaEmpirica.cpp  IV_Elecciones.cpp  contar.cpp  prueba.cpp
1 Curso/1 Cuatrimestre/TOC/Seminarios/: 01.-SEMINARIO_1_TOC_SISTEMAS_NUMERACION_EJERCICIOS.doc  02.-SEMINARIO_2_TOC_REPRESENTACION DE INFORMACION MULTIMEDIA_EJERCICIOS.doc  03.-SEMINARIO_3_TOC_ALGEBRA_CONMUTACION_FUNCIONES_CONMUTACION_EJERCICIOS.docx
1 Curso/2 Cuatrimestre/: README.md
1 Curso/2 Cuatrimestre/CAL II/: README.md
1 Curso/2 Cuatrimestre/EDIP/: README.md
1 Curso/2 Cuatrimestre/EDIP/Ejercicios mandados en clase/: README.md
1 Curso/2 Cuatrimestre/EDIP/Relaciones resueltas/: README.md
1 Curso/2 Cuatrimestre/FS/: README.md
1 Curso/2 Cuatrimestre/FS/Teoría/: EJERCICIO SOBRE MULTIPROGRAMACIÓN TEMA 2.docx  README.md
1 Curso/2 Cuatrimestre/GEO II/: README.md
1 Curso/2 Cuatrimestre/MN I/: README.md
1 Curso/2 Cuatrimestre/MN I/Exámenes/: README.md
1 Curso/2 Cuatrimestre/MP/: README.md
II_Curso/II_CUATRI/MMI/: MMI EJercicio Javier Gómez Lópezpdf
II_Curso/I_CUATRI/ED/Retos/Reto5/: CMakeLists.txt
II_Curso/I_CUATRI/ED/Retos/Reto5/programas/: ejer22.cpp  ejer24.cpp  ejer30.cpp
(+932 files in other folders)
